--- a/reviews.html
+++ b/reviews.html
@@ -92,7 +92,7 @@
 
                 <div class="box2">
                     <div class="heading1"><strong>Lenovo Legion 5i Pro (2022)</strong> </div>
-                    <img src="./images/ash/leno.png" alt="laptop front" width="500" height="360">
+                    <img class="lun" src="./images/ash/leno.png" alt="laptop front" width="500" height="360">
             
                     <img src="./images/ash/lenovo-laptop.png" alt="Lenovo Laptop" class="levono1"
                     height="300"
