--- a/cameras.html
+++ b/cameras.html
@@ -37,7 +37,7 @@
                 <li><a href="./bestBuyers.html">BestBuys</a> </li>
                 <li><a href="./reviews.html">Reviews</a> </li>
                 <li id="li_review">
-                    <a id="menu_review" href="#">Categories</a>
+                    <span id="menu_review">Categories</span>
                     <i class="fa-solid fa-angle-down"></i>
                     <div id="categories">
                         <ul>
@@ -81,52 +81,61 @@
                 <div class="col"><img src="./images/home_camera_shared/camera-360.png" style="width: 250px;">
                     <h2 style="font-size: 20px;">Insta360 ONE RS 1-inch 360 Edition review</h2>
                     <p style="font-size: 12px;">28 Jun 2022 Gordon Laing</p>
-                    <p>The ONE RS 1-inch 360 Edition from Insta360 captures immersive photos or videos you can explore in headsets or scroll-around on screens, but what makes it stand out are larger 1in sensors. Find out how it performs in our review!<br></p>
+                    <p>The ONE RS 1-inch 360 Edition from Insta360 captures immersive photos or videos you can explore in headsets<span id="dots">...</span><span id="more"> or scroll-around on screens, but what makes it stand out are larger 1in sensors. Find out how it performs in our review!</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
                 <div class="col">
                     <a href="./cameras_fujifilm_xh2s.html"><img src="./images/home_camera_shared/camera6fujifilm1.jpg" style="width: 250px;"></a> 
                     <h2 style="font-size: 20px;">Fujifilm XH2S review so far</h2>
                     <p style="font-size: 12px;">25 Jun 2022 Gordon Laing</p>
-                    <p>The Fujifilm X-H2S is a high-end mirrorless camera with a new 26 MP stacked sensor, 40fps bursts, IBIS and 6.2k video. Ahead of my review I've added sample images from a final sample!<br></p>
+                    <p>The Fujifilm X-H2S is a high-end mirrorless camera with a new 26 MP stacked sensor, 40fps bursts, IBIS and <span id="dots">...</span><span id="more">6.2k video. Ahead of my review I've added sample images from a final sample!</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
                 <div class="col"><img src="./images/home_camera_shared/camera7fujifilm2.webp" style="width: 250px;">
                     <h2 style="font-size: 20px;">Fujifilm INSTAX mini Link 2 review</h2>
                     <p style="font-size: 12px;">17 Jun 2022 Gordon Laing</p>
-                    <p>The INSTAX mini Link 2 is a portable wireless printer for your phone that uses the popular mini instant format. It includes a new Air mode that uses the printer like a digital spray-can. Intrigued? Check out my review!<br></p>
+                    <p>The INSTAX mini Link 2 is a portable wireless printer for your phone that uses the popular mini instant for<span id="dots">...</span><span id="more">mat. It includes a new Air mode that uses the printer like a digital spray-can. Intrigued? Check out my review!</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col"><img src="./images/home_camera_shared/camera8samyang.png" style="width: 250px;">
                     <h2 style="font-size: 20px;">Samyang 800mm f8.0 review</h2>
                     <p style="font-size: 12px;">06 Jun 2022 Thomas</p>
-                    <p>The Samyang 800mm f8.0 is a long telephoto squeezed into a barrel just 172mm long, 1kg in weight, and at a low price too. Is it too good to be true? Possibly, as Thomas discovered in his latest review.<br></p>
+                    <p>The Samyang 800mm f8.0 is a long telephoto squeezed into a barrel just 172mm long, 1kg in weight, and at a <span id="dots">...</span><span id="more">low price too. Is it too good to be true? Possibly, as Thomas discovered in his latest review.</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
                 <div class="col"><img src="./images/home_camera_shared/camera5sony.jpeg" style="width: 250px;">
                     <h2 style="font-size: 20px;">Sony E 15mm f1.4 G review</h2>
                     <p style="font-size: 12px;">01 Jun 2022 Gordon Laing</p>
-                    <p>The Sony E 15mm f1.4 G is a fast wide prime lens designed for Sony’s mirrorless cameras with cropped APSC sensors. Find out if it's the best lens for you in my review!<br></p>
+                    <p>The Sony E 15mm f1.4 G is a fast wide prime lens designed for Sony’s mirrorless cameras with cropped APSC s<span id="dots">...</span><span id="more">ensors. Find out if it's the best lens for you in my review!</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
                 <div class="col"><img src="./images/home_camera_shared/camera5sony.jpeg" style="width: 250px;">
                     <h2 style="font-size: 20px;">Sony E 11mm f1.8 review</h2>
                     <p style="font-size: 12px;">01 Jun 2022 Gordon Laing</p>
-                    <p>The Sony E 11mm f1.8 is an ultra-wide prime lens designed for Sony’s mirrorless cameras with cropped APSC sensors. Find out how it performs in my review!<br></p>
+                    <p>The Sony E 11mm f1.8 is an ultra-wide prime lens designed for Sony’s mirrorless cameras with cropped APSC s<span id="dots">...</span><span id="more">ensors. Find out how it performs in my review!</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col"><img src="./images/home_camera_shared/camera2.webp" style="width: 250px;">
                     <h2 style="font-size: 20px;">Canon EOS R7 review-so-far</h2>
                     <p style="font-size: 12px;">24 May 2022 Gordon Laing</p>
-                    <p>The Samyang 800mm f8.0 is a long telephoto squeezed into a barrel just 172mm long, 1kg in weight, and at a low price too. Is it too good to be true? Possibly, as Thomas discovered in his latest review.<br></p>
+                    <p>The Samyang 800mm f8.0 is a long telephoto squeezed into a barrel just 172mm long, 1kg in weight, and at a<span id="dots">...</span><span id="more"> low price too. Is it too good to be true? Possibly, as Thomas discovered in his latest review.</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
                 <div class="col"><img src="./images/home_camera_shared/camera-dslr.png" style="width: 250px;">
                     <h2 style="font-size: 20px;">Best lens for a vintage DSLR?</h2>
                     <p style="font-size: 12px;">10 May 2022 Gordon Laing</p>
-                    <p>The Sony E 15mm f1.4 G is a fast wide prime lens designed for Sony’s mirrorless cameras with cropped APSC sensors. Find out if it's the best lens for you in my review!<br></p>
+                    <p>The Sony E 15mm f1.4 G is a fast wide prime lens designed for Sony’s mirrorless cameras with cropped APSC <span id="dots">...</span><span id="more">sensors. Find out if it's the best lens for you in my review!</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
                 <div class="col"><img src="./images/home_camera_shared/camera4nikon.jpg" style="width: 250px;">
                     <h2 style="font-size: 20px;">Nikon Z 800mm f6.3 VR S review</h2>
                     <p style="font-size: 12px;">01 May 2022 Thomas</p>
-                    <p>The Sony E 11mm f1.8 is an ultra-wide prime lens designed for Sony’s mirrorless cameras with cropped APSC sensors. Find out how it performs in my review!<br></p>
+                    <p>The Sony E 11mm f1.8 is an ultra-wide prime lens designed for Sony’s mirrorless cameras with cropped APSC <span id="dots">...</span><span id="more">sensors. Find out how it performs in my review!</span></p>
+                    <button onclick="more()" id="myBtn">Read more</button>
                 </div>
             </div>
         </div>
@@ -176,5 +185,6 @@
     </footer>
 
     <script src="./js/header.js"></script>
+    <script src="./js/cameras.js"></script>
 </body>
 </html>
