email validation changes

--- a/signUp.html
+++ b/signUp.html
@@ -11,9 +11,9 @@
         <div class="contact-box">
             <div class="left"></div>
             <div class="right">
+                <!-- action attrubute used to perform action on the next page when submitted -->
                 <form action="index.html">
                     <h2>Sign UP</h2>
-                    
                     <label class="lable_name">First Name:</label>
                     <input type="text" class="field" placeholder="First Name" name="fname" id="firstName">	
                     <span></span>
