--- a/new_products.html
+++ b/new_products.html
@@ -17,11 +17,17 @@
   <!-- header -->
   <header>
     <div class="logo_wrapper">
-      <a href="#" id="logo"> <img src="images/header/logo.png" alt="logo">
+      <a href="#" id="logo">
+        <img src="images/header/logo.png" alt="logo">
         <p>PocketRev</p>
       </a>
-      <div id="login_wrapper_mobile"> <a href="login.html">Login</a> <img src="images/header/account-circle.svg"
-          alt="account"> <i id="hamburger_menu" class="fa-solid fa-bars"></i> </div>
+  
+      <div id="login_wrapper_mobile">
+  
+        <a href="#">Login</a>
+        <img src="images/header/account-circle.svg" alt="account">
+        <i id="hamburger_menu" class="fa-solid fa-bars"></i>
+      </div>
     </div>
     <nav id="top_nav">
       <ol>
@@ -29,7 +35,9 @@
         <li><a href="./new_products.html">New Products</a> </li>
         <li><a href="./bestBuyers.html">BestBuys</a> </li>
         <li><a href="./reviews.html">Reviews</a> </li>
-        <li id="li_review"> <a id="menu_review" href="#">Categories</a> <i class="fa-solid fa-angle-down"></i>
+        <li id="li_review">
+          <span id="menu_review">Categories</span>
+          <i class="fa-solid fa-angle-down"></i>
           <div id="categories">
             <ul>
               <li><a href="./mobile_tablets.html"> Phones and Tablet</a></li>
@@ -44,7 +52,10 @@
         <li class="bottom_border_initial"><a href="./brands.html">Brands</a></li>
       </ol>
     </nav>
-    <div id="login_wrapper"> <a href="./login.html">Login</a> <img src="images/header/account-circle.svg" alt="account">
+  
+    <div id="login_wrapper">
+      <a href="./login.html">Login</a>
+      <img src="images/header/account-circle.svg" alt="account">
     </div>
   </header>
 
