--- a/signUp.html
+++ b/signUp.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./css/signUp.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+    <link rel="icon" href="./images/logo.png">
 </head>
 <body>
     <div class="container">
