--- a/new_products.html
+++ b/new_products.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="new products" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+  <script src="https://kit.fontawesome.com/f6de64d3fc.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/new_prodcuts.css">
