--- a/desktop.html
+++ b/desktop.html
@@ -12,6 +12,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="./images/logo.png" />
     <script src="https://kit.fontawesome.com/f6de64d3fc.js" crossorigin="anonymous"></script>
+    
+    <script src="https://kit.fontawesome.com/f6de64d3fc.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>desktop</title>
 </head>
